# fnaf-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SHOWCASE.md
.cursor/docs/: animatronic-ai-walkthrough.md
.cursor/rules/: git-push.mdc
release/: HOW_TO_PLAY.txt  HOW_TO_PLAY_mac.txt  PLAY.bat  Play.command
scripts/: package-macos.sh  package-windows.ps1
src/: ai.cpp  ai.hpp  audio.cpp  audio.hpp  clone.cpp  game_state.cpp  game_state.hpp  input.cpp  input.hpp  main.cpp  render.cpp  render.hpp
